force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/fflib_LogEntry__c.object-meta.xml
<CustomObject>
    <description>Object to store log entries after they a caught from a Platform event</description>
    <label>Log Entry</label>
    <nameField>
        <label>LogEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>