force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>