force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <description>The logging level</description>
    <label>Log Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>WARN</fullName>
                <label>Warning</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>Informational</label>
            </value>
            <value>
                <fullName>DEBUG</fullName>
                <label>Debug</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>