force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The Message of the log entry</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>