force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>