force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>The User</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LogEntries</relationshipName>
    <type>Lookup</type>
</CustomField>