force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LogLevel__c</columns>
    <columns>User__c</columns>
</ListView>