force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/listViews/All_Error_Last_7_days.listView-meta.xml
<ListView>
    <fullName>All_Error_Last_7_days</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>Message__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LogLevel__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>All error entries last 7 days</label>
</ListView>