force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEntry__c/listViews/All_Last_day.listView-meta.xml
<ListView>
    <fullName>All_Last_day</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LogLevel__c</columns>
    <columns>User__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <label>All last day</label>
</ListView>